--- a/nuxt-tailwindcss/package.json
+++ b/nuxt-tailwindcss/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/tailwindcss": "^4.0.3",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
